--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+body {
+  max-width: 120rem;
+  margin: 0 auto;
+  background-color: #0f1629;
+}
