--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,65 +4,35 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 20 14.3% 4.1%;
+    --background: 224 46% 11%;
+    --foreground: 286 7.1% 98.1%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 20 14.3% 4.1%;
+    --muted: 286 35.5% 18.6%;
+    --muted-foreground: 286 7.1% 56.2%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 20 14.3% 4.1%;
+    --popover: 286 50.8% 8.06%;
+    --popover-foreground: 286 7.1% 98.1%;
 
-    --primary: 24 9.8% 10%;
-    --primary-foreground: 60 9.1% 97.8%;
+    --card: 0 0% 0% 0;
+    --card-foreground: 286 7.1% 98.1%;
 
-    --secondary: 60 4.8% 95.9%;
-    --secondary-foreground: 24 9.8% 10%;
+    --border: 286 35.5% 36.6%;
+    --input: 286 35.5% 18.6%;
 
-    --muted: 60 4.8% 95.9%;
-    --muted-foreground: 25 5.3% 44.7%;
+    --primary: 269 71% 62%;
+    --primary-foreground: 286 7.1% 98.1%;
 
-    --accent: 60 4.8% 95.9%;
-    --accent-foreground: 24 9.8% 10%;
+    --secondary: 239 41% 40%;
+    --secondary-foreground: 286 7.1% 98.1%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 60 9.1% 97.8%;
-
-    --border: 20 5.9% 90%;
-    --input: 20 5.9% 90%;
-    --ring: 20 14.3% 4.1%;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 20 14.3% 4.1%;
-    --foreground: 60 9.1% 97.8%;
-
-    --card: 20 14.3% 4.1%;
-    --card-foreground: 60 9.1% 97.8%;
-
-    --popover: 20 14.3% 4.1%;
-    --popover-foreground: 60 9.1% 97.8%;
-
-    --primary: 60 9.1% 97.8%;
-    --primary-foreground: 24 9.8% 10%;
-
-    --secondary: 12 6.5% 15.1%;
-    --secondary-foreground: 60 9.1% 97.8%;
-
-    --muted: 12 6.5% 15.1%;
-    --muted-foreground: 24 5.4% 63.9%;
-
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 60 9.1% 97.8%;
+    --accent: 239 41% 40%;
+    --accent-foreground: 286 7.1% 98.1%;
 
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 60 9.1% 97.8%;
+    --destructive-foreground: 286 7.1% 98.1%;
 
-    --border: 12 6.5% 15.1%;
-    --input: 12 6.5% 15.1%;
-    --ring: 24 5.7% 82.9%;
+    --ring: 269 71% 62%;
+    --radius: 0.5rem;
   }
 }
 
@@ -73,10 +43,4 @@
   body {
     @apply bg-background text-foreground;
   }
-}
-
-body {
-  max-width: 120rem;
-  margin: 0 auto;
-  background-color: #0f1629;
 }
