--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,17 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
-      display: none;
+    display: none;
   }
- /* Hide scrollbar for IE, Edge and Firefox */
+  /* Hide scrollbar for IE, Edge and Firefox */
   .no-scrollbar {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
-}
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
 
 @layer base {
@@ -55,5 +54,8 @@
   }
   body {
     @apply bg-background text-foreground;
+    @apply max-w-[120rem] 
   }
 }
+
+
